package com.artemissoftware.shoppingcart.presentation.addproduct

internal object TestTags {
    const val PRODUCT_DETAIL_CONTENT = "product_detail_content"
    const val PRODUCT_DETAIL_DESCRIPTION = "product_detail_description"
    const val PRODUCT_DETAIL_REMOVE_BUTTON = "product_detail_remove_button"
    const val PRODUCT_DETAIL_QUANTITY = "product_detail_quantity"
    const val PRODUCT_DETAIL_ADD_BUTTON = "product_detail_add_button"
    const val PRODUCT_DETAIL_BUY_BUTTON = "product_detail_buy_button"

    const val PRODUCT_DETAIL_ERROR = "product_detail_error"
}